# WaveGauge

./: .gitignore  Makefile  README.md  README_zh-CN.md  build.spec  package-lock.json
.github/workflows/: build.yml
.trae/rules/: techstack.md
backend/: app.py  engine.py  main.py  pyproject.toml  requirements.txt  sample_compare.vcd
backend/wavekit/: __init__.py
data/samples/: sample.vcd  sample_compare.vcd
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/analysis/strategies/: AnalysisStrategy.ts  CompleteStrategy.ts  CounterStrategy.ts  InstantStrategy.ts  index.ts  registry.ts
frontend/src/components/: Analysis.vue  AnalysisGroup.vue  AnalysisResult.vue  ProgressValueDisplay.vue  WaveAnalysis.vue  WaveSource.vue  WaveformTabs.vue
frontend/src/stores/: analysis.ts
scripts/: build.py  build.sh  package.sh  run.sh
