[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wavegauge-backend"
version = "0.1.3"
description = "Backend service for WaveGauge"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "pandas",
    "asteval",
    "python-multipart",
    "websockets",
    "wavekit>=0.1,<0.2",
]

[tool.setuptools]
py-modules = ["app", "engine"]
